--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
 
     <!-- Font Awesome Connection -->
     <link rel="stylesheet" href="./fontawesome/css/all.min.css">
-    <title>React App</title>
+    <title>FirstEarner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
